Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-71193

QML crash in QQuickItemParticle::processDeletables

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • None
    • 5.11.0, 5.14.0
    • Quick: Particles
    • None
    • Windows
    • 64ab935e0a69b1ad5bdb6f59dbe3f9304716c02a

      Hello,

      I am trying to create a kind of weather overlay system, and for this purpose I use particles in QML and Loaders to switch when necessary. However I faced a crash, and after a few days of investigations to try to reproduce systematically, I came out with a code that I attached here. I can't really tell where this is coming from. From what I see it is probably related to the fact that some QQuickItems-particles get deleted (maybe because of the Loader) and are still referenced in QQuickItemParticle.

      I attached the backtrace as well.

      Environment is Qt 5.11.0 with MinGW 5.3 under Windows 10, reproduced with two different computers. I couldn't confirm that this appears as well under Linux.

      Thanks,
      Louis

        1. QTBUG-crash-animation.zip
          4 kB
          Louis du Verdier
        2. QTBUG-71193-Backtrace.txt
          170 kB
          Louis du Verdier
        For Gerrit Dashboard: QTBUG-71193
        # Subject Branch Project Status CR V

            lagocs Laszlo Agocs
            amnell Louis du Verdier
            Votes:
            2 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes